# vacancy-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: constants.py  engine_abc.py  file_handler.py  file_handler_json.py  hh.py  main.py  parser.py  parser_hh.py  parser_superjob.py  superjob.py  vacancy.py  vacancy_filter.py
