[tool.poetry]
name = "src"
version = "0.1.0"
description = "Vacancy parser console application (hh.ru and superjob.ru)"
authors = ["Tigran Saatchyan TSA <mr.saatchyan@yandex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.4"
flake8 = "^6.0.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
